<resources>
    <string name="app_name">Candy Corner</string>
    <string name="StockOnHand">Stock on Hand</string>
    <string name="StockInTransit">Stock in Transit</string>
    <string name="Price">Price</string>
    <string name="ReorderQuanity">ReorderQuantity</string>
    <string name="ReorderAmount">Reorder Amount</string>
    <string name="makeOrder">Make Order</string>
    <string name="orderLabel">Enter quantity: </string>
    <string-array name="option">
        <item name="Receiving Stock">Receiving Stock</item>
        <item name="Ordering Stock">Ordering Stock</item>
    </string-array>

    <string-array name="candies">
        <item>- Select a Product -</item>
        <item>MilkyWay</item>
        <item>Gummy Bears</item>
        <item>Kit Kat</item>
        <item>Jolly Ranchers</item>
    </string-array>
</resources>