<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Spinner
        android:id="@+id/candySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/StockOnHand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/handLabel"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StockOnHand" />

        <TextView
            android:id="@+id/handValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/StockInTransit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transitlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StockInTransit" />

        <TextView
            android:id="@+id/transitvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pricelabel"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Price" />

        <TextView
            android:id="@+id/pricevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReorderQuantity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantitylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ReorderQuanity" />

        <TextView
            android:id="@+id/quantityvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ReorderAmount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amtlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ReorderAmount" />

        <TextView
            android:id="@+id/amtvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>